# CLI-Covariance-Optimizer

./: README.md  pyproject.toml
optimize/: client.py  covariance.py
